--- a/app/views/evaluations/new.html.erb
+++ b/app/views/evaluations/new.html.erb
@@ -1,13 +1,9 @@
 <div class="container">
-  <div style="padding-top: 25vh;"></div>
-  <h1 class="center">Do you want to evaluate the results of the model?</h1>
+  <h1 class="title">Let’s check the results of your individual preference and social models.</h1>
   <div class="row">
     <div class="col s5"></div>
     <div class="col s1">
-      <a class="waves-effect waves-dark btn" id="rank_yes_btn">YES</a>
-    </div>
-    <div class="col s1">
-      <a class="waves-effect waves-dark btn" id="rank_no_btn">NO</a>
+      <a class="waves-effect waves-dark btn" id="rank_yes_btn">Let's Go!</a>
     </div>
     <div class="col s5"></div>
   </div>
@@ -15,9 +11,6 @@
 
 <script type="text/javascript">
   $("#rank_yes_btn").click(function(event) {
-    window.location.href = "/ranked_list/ranked_list/"
-  });
-  $("#rank_no_btn").click(function(event) {
     window.location.href = "/ranked_list/ranked_list/"
   });
 </script>
