styled pairwise page

--- a/app/views/pairwise_comparisons/index.html.erb
+++ b/app/views/pairwise_comparisons/index.html.erb
@@ -20,13 +20,13 @@
 
 
 <div id = "aller_encompassing" style = "display:none;">
-<h3 id = "titulo" style = "color:#3d6ab1;font-weight:bold;margin-left:15%;"> Which Request Would You Like to Recieve? </h3>
+<h2 id = "titulo" class="title"> Which Request Would You Like to Recieve? </h2>
 <h6 id = "counter" style = "float:right;margin-top:-4%;margin-right:4%;font-size:2em;font-weight:lighter;color:grey;">
 1/<%= @num_pairs %>
 </h6>
-<hr style="color: white;border-width: 1px;overflow:visible;width: 100%;"/>
+<hr class="feature-hr"/>
 <br/>
-<p id="prompt" style="margin-left:15%;color:black;width:70%;font-size:1.5em;line-height:22pt;font-weight:normal;">
+<p id="prompt" class="feature-text">
   For the scenario set below, please assume that you have your app open and the algorithm notifies
   you of two potential requests in your area. Please assume that the number of customers in demand
   and traffic conditions in your area have no effect on your decision. Based on the information you
