got model train working for individual

--- a/app/views/evaluations/new.html.erb
+++ b/app/views/evaluations/new.html.erb
@@ -10,6 +10,7 @@
 </div>
 
 <script type="text/javascript">
+  // TODO: do with social_comparisons too
   $("#rank_yes_btn").click(function(event) {
     console.log("hi");
     let data = <%= raw @individual_comparisons_json %>;
