--- a/app/assets/stylesheets/overrides.css
+++ b/app/assets/stylesheets/overrides.css
@@ -17,7 +17,7 @@ a:hover
 /* login page styling */
 .login-b1
 {
-  margin-top:5%;
+  margin-top:-45vw;
   margin-right: 4vw;
   width:33%;
   float:right;
@@ -30,7 +30,6 @@ a:hover
   font-weight: bold;
   font-size:3em;
   margin-left:3.5vw;
-  margin-bottom: 60px;
 }
 
 .login-b1 hr
@@ -39,8 +38,8 @@ a:hover
   border-width: 0.25pt;
   overflow:visible;
   width: 125%;
-  margin-top: 60px;
-  margin-bottom: 35px;
+
+
 }
 
 .control-group-id label {
@@ -77,6 +76,7 @@ a:hover
   background: #3d6ab1;
   float:left;
   width:63%;
+
   z-index:3;
 }
 
@@ -100,26 +100,20 @@ a:hover
 }
 
 
-.login-b2 h3
+.login-b2 h4
 {
   margin-top:5%;
-  margin-left:9%;
+  margin-left:4%;
   font-weight: bold;
-  line-height:1.25;
-  color: white;
-  font-family: "Helvetica Neue bold", sans-serif;
 }
 
 .login-b2 p
 {
   margin-top:5%;
-  margin-left:9%;
-  margin-right:9%;
-  font-size:23px;
-  font-weight:400;
-  line-height:1.25;
-  color: white;
-  font-family: "Helvetica Neue", sans-serif;
+  margin-left:4%;
+  margin-right:7%;
+  font-size:1.5em;
+  line-height:17pt;
 }
 
 .modal-header {
@@ -175,177 +169,4 @@ a:hover
   color:red;
   margin-top:-1%;
   display:none;
-}
-
-
-/* Feature page styling */
-.title {
-  margin-left:10%;
-  color:#3d6ab1;
-  font-family: "Helvetica Neue", sans-serif;
-  font-weight: bold;
-  margin-bottom: 15px;
-}
-
-.feature-text {
-  margin-left:10%;
-  width:80%;
-  font-size:23px;
-  font-weight:400;
-  line-height:1.5;
-  font-family: "Helvetica Neue", sans-serif;
-  color: #636363;
-}
-
-.feature-list {
-  margin-left:5%;
-  width:80%;
-}
-
-.feature-hr {
-  margin-top: 40px;
-  margin-bottom: 40px;
-}
-
-.feature-selection-image {
-  margin-top: 10%;
-  width:50%;
-  height: auto;
-}
-
-.feature-image-block {
-  display: flex;
-  align-items: center;
-  margin-top: -8%;
-  margin-bottom: -6%;
-}
-
-.feature-table{
-  color: #515151;
-  margin-left:10%;
-  margin-right:5%;
-  width:80%;
-}
-
-.subheader {
-  font-weight:bold;
-  font-size: 30px;
-  margin-top: 30px;
-  margin-bottom: 2%;
-  font-family: "Helvetica Neue", sans-serif;
-  color:black;
-}
-
-.feature-card-text {
-  margin-left:10%;
-  font-size:18px;
-  font-weight:400;
-  line-height:1.5;
-  font-family: "Helvetica Neue", sans-serif;
-  color: #636363;
-  display: inline-block;
-}
-
-
-/* Page 1 styling */
-
-.pg-1-subheader {
-  font-size:2.4em;
-  font-weight:bold;
-  color:#3d6ab1;
-  font-family: "Helvetica Neue", sans-serif;
-  margin-left:10%;
-}
-
-.text-image-container {
-  margin-left:2%;
-}
-
-.pg-1-image-block {
-  display: flex;
-  align-items: center;
-  margin-top: -4%;
-  margin-left: 3%;
-  width: 80%;
-}
-
-.personal-pref-image {
-  width:30%;
-  height: auto;
-}
-
-.scenario-names {
-  color:#3d6ab1;
-  margin-left:10%;
-  width:80%;
-  font-size:23px;
-  font-weight:400;
-  line-height:1.5;
-  font-family: "Helvetica Neue", sans-serif;
-}
-
-#start_btn_1 {
-  margin-top: 3%;
-  margin-right: 7.5%;
-  background: #3d6ab1;
-  color: #ffffff;
-  border-radius: 5px;
-  width: 12.5vw;
-  height: 7.5vh;
-  font-weight: bold;
-  font-size: 1.38em;
-  line-height: 70px;
-  float: right;
-}
-
-.social-ranking-image {
-  width:40%;
-  height: auto;
-}
-
-.social-image-block {
-  display: flex;
-  align-items: center;
-  width: 60%;
-  margin: auto;
-}
-#start_btn_4 {
-  margin-top: 3%;
-  margin-right: 7.5%;
-  background: #3d6ab1;
-  color: #ffffff;
-  border-radius: 5px;
-  width: 12.5vw;
-  height: 7.5vh;
-  font-weight: bold;
-  font-size: 1.38em;
-  line-height: 70px;
-  float: right;
-}
-
-#rank_yes_btn {
-  margin-top: 100%;
-  background: #3d6ab1;
-  color: #ffffff;
-  border-radius: 5px;
-  width: 12.5vw;
-  height: 7.5vh;
-  font-weight: bold;
-  font-size: 1.38em;
-  line-height: 70px;
-}
-
-.evaluation-image {
-  margin-top: 0%;
-  width:40%;
-  height: auto;
-}
-
-.evaluation-image-block {
-  display: flex;
-  align-items: center;
-  margin-top: -2%;
-  margin-bottom: -6%;
-  margin-right: 10%;
-  margin-left: 1%;
 }
