--- a/app/views/evaluations/new.html.erb
+++ b/app/views/evaluations/new.html.erb
@@ -1,33 +1,62 @@
-<div class="container">
-  <h1 class="title">Let’s check the results of your individual preference and social models.</h1>
-  <div class="row">
-    <div class="col s5"></div>
-    <div class="col s1">
-      <a class="waves-effect waves-dark btn" id="rank_yes_btn">Go!</a>
-    </div>
-    <div class="col s5"></div>
-  </div>
+<p style = "margin-left:30%;margin-top:10%;"> Thank-you for your participation </p>
+
+<h2>For CMU research:</h2>
+<p>Individual</p>
+<%= @individual_weights %>
+<p>Social</p>
+<%= @social_weights %>
+
+<div class="row">
+ <div class = "login-b2">
+   <h4 style = "color:white;"> Thank you for your<br> participation in our study!</h4>
+   <p style = "color:white;">We really appreciate your help with our research on algorithms. Your answers and decisions from this study will be used to help train our own matching algorithm that mirrors the real-world systems used by companies like Uber, Lyft, and Postmates. Let us thank you properly—
+please enter your email in the box to the right to receive a $13 gift card of your choosing.<br><br>
+If you have any questions or issues with the online study, please
+contact rhlee@andrew.cmu.edu.</p>
+   <br> <br> <br><br> <br> <br><br> <br>  <br> <br> <br><br> <br> <br><br> <br> <br><br>
+ </div>
 </div>
 
+<div class="row">
+ <div class = "login-b1">
+   <div>
+     <div>
+
+       <span>Your Info</span>
+         <br /> <br /> <br /> <hr id = 'hhr'> <br />
+         <form action="#" id = "about_form" style = "display:block;margin-left:10%;width:80%;">
+           <label for = "email" style = "color:black;font-weight:bold;font-size:1.38em;margin-bottom:0.5vh;"> Name </label>
+           <input id = "email" type="text" name="lower" value="" placeholder="" required> <br> <br>
+
+           <label for = "name" style = "color:black;font-weight:bold;font-size:1.38em;margin-bottom:0.5vh;"> Email </label>
+           <input id = "name" type="text" name="upper" value="" placeholder="" required> <br> <br>
+
+         </form>
+         <a class="waves-effect waves-dark btn" id = "eval_fin_btn" style = "padding-top:.5%;padding-bottom:4%;margin-top:3%;width:20%;color:#FFFFFF;display:block;float:right;background-color:#3d6ab1;font-weight:bold"> Next </a>
+     </div>
+   </div>
+ </div>
+</div>
+
+
+
 <script type="text/javascript">
-  $("#rank_yes_btn").click(function(event) {
-    console.log("hi");
-    let data = <%= raw @individual_comparisons_json %>;
-    console.log(data);
-    // console.log(JSON.stringify(data));
-    $.ajax({
-      url: "http://localhost:5000/train",
-      type: "post",
-      contentType: 'application/json',
-      dataType: 'json',
-      data: JSON.stringify({ data: data }),
-      success: function(response){
-        console.log('Saved Successfully', response);
-        // window.location.href = "/ranked_list/ranked_list/"
-      },
-      error:function($xhr){
-        console.log($xhr);
-      },
-    });
+
+  $("#eval_fin_btn").click(function(event) {
+   email  = ($("#email")[0]).value
+   name = ($("#name")[0]).value
+   $.ajax({
+     url: "/store_info?email="+ email + "&name=" + name,
+     type: "post",
+     success: function(){
+       alert("thankyou!")
+       window.location.href = "/pairwise_comparisons/new"
+     },
+     error:function($xhr){
+       console.log($xhr);
+     }
+   });
   });
+
 </script>
+
