--- a/app/views/pairwise_comparisons/_evaluation.html.erb
+++ b/app/views/pairwise_comparisons/_evaluation.html.erb
@@ -88,7 +88,7 @@ decisions? </label>
      type: "post",
      success: function(){
        console.log('Saved Successfully');
-       window.location.href = "/ranked_list/ranked_list/"
+       //window.location.href = "/pairwise_comparisons"
      },
      error:function($xhr){
        console.log($xhr);
