--- a/app/views/pairwise_comparisons/_page_2.html.erb
+++ b/app/views/pairwise_comparisons/_page_2.html.erb
@@ -1,18 +1,34 @@
-<div id = "pg_2" style = "display:none">
-  <h2 class="title">Social Preference for Global Assignment</h2>
-  <hr class="feature-hr">
-  <br>
+<div id = "pg_2" style = "width:90%;margin-left:5%;display:none">
+<h1 id = "feat_select" style = "margin-left:10%;color:#3d6ab1" >Pairwise Comparsion Part 2/2</h1> <p style ="font-weight:lighter;font-size:2.3em;color:#3d6ab1;display:inline;float:right;margin-top:-3.5%"> Part 1 Completed </p>
+<hr style = "margin-left:-15%;color: white;border-width: 1px;overflow:visible;width: 130%;"/>
+<br>
 
-  <div class="social-image-block">
-    <div class="text-image-container">
-      <h2 class = "title">Social Ranking</h2>
-      <h5 class = "title" style="color:#769FCD;">Who Should Get the Ping?</h5>
-    </div>
-    <%= image_tag ('Social_Ranking.png'), :class => "social-ranking-image" %>
-  </div>
+<p style = "margin-left:10%;color:black;width:75%;font-size:1.5em;line-height:22pt;font-weight:normal;">
+  In the previous exercise, you chose features that you believe your company’s in-app algorithm
+  should consider when matching drivers to customers. We are now going to give you some sets of
+  hypothetical scenarios based on your chosen features. Each set will have two options, and it is
+  up to your discretion to choose which is the better option. Please assume that these scenarios
+  take place in a small, set location (not a large area like New York City.) Your decisions for each
+  set will be used to help train a new matching algorithm that we are developing for test cases.
+</p>
+<br> <br> <br>
 
 
-  <%= link_to 'NEXT', new_how_path, method: :post, :class => "waves-effect waves-dark btn", :style => "z-index:0;margin-top:5%;margin-right:10vw;float:right;width:12.5%;padding-top:0.7%;padding-bottom:3%;color:#FFFFFF;background-color:#3d6ab1;font-weight:bold;font-size:1.2em;" %>
-  <br><br><br><br><br><br><br><br><br><br><br><br><br>
+<p style = "margin-left:10%;font-size:2.4em;font-weight:bold;color:#3d6ab1">Part 2. Social Ranking </p>
+<p style = "margin-left:10%;color:black;width:90%;font-size:1.5em;line-height:17pt;font-weight:normal;">
+  For the following scenario sets, please assume the role of the algorithm. You will be given two
+  drivers competing for the same customer ping. Based on the information you believe the algorithm
+  should consider when assigning drivers to requests, please choose which driver you would prefer the
+  algorithm to match with the request ping. The information below are features you previously chose that
+  are applicable to these sets of scenarios.
+</p>
+
+<br> <br>
+
+
+  <br/>
+
+<%= link_to 'NEXT', new_how_path, method: :post, :class => "waves-effect waves-dark btn", :style => "z-index:0;margin-top:5%;margin-right:10vw;float:right;width:12.5%;padding-top:0.7%;padding-bottom:3%;color:#FFFFFF;background-color:#3d6ab1;font-weight:bold;font-size:1.2em;" %>
+<br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 </div>
