--- a/app/views/features/_form.html.erb
+++ b/app/views/features/_form.html.erb
@@ -1,22 +1,22 @@
-<%= form_with(model: feature, local: true) do |form| %>
-  <% if feature.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(feature.errors.count, "error") %> prohibited this feature from being saved:</h2>
-
-      <ul>
-      <% feature.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
+<div class="card">    
+  <div class="card-content">
+    <%= simple_form_for(@feature) do |f| %>
+      <div class="row">
+        <div class="form-inputs">
+          <%= f.input :name, label_html: { class: 'active' } %>
+          <%= f.input :description, label_html: { class: 'active' } %>
+          <%= fields_for :data_range, @feature.data_range do |feature_range| %>
+            Lower Bound  :<%= feature_range.text_field :lower_bound %>
+            Upper Bound  :<%= feature_range.text_field :upper_bound %>
+          <% end %>
+          <%= f.check_box :active %>
+      </div>
     </div>
-  <% end %>
-
-  <div class="field">
-    <%= form.label :name %>
-    <%= form.text_field :name %>
   </div>
-
-  <div class="actions">
-    <%= form.submit %>
+</div>
+  <div class="row">
+    <div class="form-actions col s7">
+      <%= f.button :submit %>
+    </div>
   </div>
 <% end %>
