added active label '

--- a/app/views/features/_form.html.erb
+++ b/app/views/features/_form.html.erb
@@ -9,7 +9,7 @@
             Lower Bound  :<%= feature_range.text_field :lower_bound %>
             Upper Bound  :<%= feature_range.text_field :upper_bound %>
           <% end %>
-          <%= f.check_box :active %>
+          Active :<%= f.check_box :active %> <br />
       </div>
     </div>
   </div>
