--- a/app/views/features/_form.html.erb
+++ b/app/views/features/_form.html.erb
@@ -9,6 +9,7 @@
             Lower Bound  :<%= feature_range.text_field :lower_bound %>
             Upper Bound  :<%= feature_range.text_field :upper_bound %>
           <% end %>
+          <%#= Not sure how to get this to work %>
           Active :<%= f.check_box :active %> <br />
       </div>
     </div>
