model working with ml

--- a/app/assets/stylesheets/ranked_list.scss
+++ b/app/assets/stylesheets/ranked_list.scss
@@ -101,7 +101,20 @@
   background: #3d6ab1;
   color: #ffffff;
   border-radius: 5px;
-  width: 12.5vw;
+  height: 7.5vh;
+  font-weight: bold;
+  font-size: 1.38em;
+  line-height: 70px;
+  float: right;
+}
+
+#lgtm_btn {
+  margin-bottom: 5%;
+  margin-top: 5%;
+  margin-right: 7.5%;
+  background: #3d6ab1;
+  color: #ffffff;
+  border-radius: 5px;
   height: 7.5vh;
   font-weight: bold;
   font-size: 1.38em;
