saving model ranks and navigating to done page

--- a/app/views/ranked_list/ranked_list.html.erb
+++ b/app/views/ranked_list/ranked_list.html.erb
@@ -67,7 +67,7 @@
       data: { new_order: ordering, order: oldOrder },
       success: function(){
         console.log('Saved Successfully');
-        //window.location.href = "/pairwise_comparisons";
+        window.location.href = "/ranked_list/done";
       },
       error:function($xhr){
         console.log($xhr);
