--- a/app/views/evaluations/new.html.erb
+++ b/app/views/evaluations/new.html.erb
@@ -1,9 +1,13 @@
 <div class="container">
   <h1 class="title">Let’s check the results of your individual preference and social models.</h1>
+  <% if current_round > 0 %>
+    <h3>-------> Tuning Round <%= current_round+1 %>!</h3>
+  <% end %>
   <div class="row">
     <div class="col s5"></div>
     <div class="col s1">
       <a class="waves-effect waves-dark btn" id="rank_yes_btn">Go!</a>
+      <%= image_tag ('loading.gif'), :class => "loading-image" %>
     </div>
     <div class="col s5"></div>
   </div>
@@ -11,7 +15,10 @@
 
 <script type="text/javascript">
   // TODO: do with social_comparisons too
+                $(".loading-image").hide();
   $("#rank_yes_btn").click(function(event) {
+    $("#rank_yes_btn").hide();
+    $(".loading-image").show();
     let data = <%= raw @comparisons_json %>;
     let url = "<%= @server_url %>";
     let category= "<%= @category %>";
@@ -40,7 +47,9 @@
               data: JSON.stringify({ data: samples }),
               success: function(response){
                 console.log("success evaluate", response);
-                window.location.href = "/ranked_list/ranked_list/?"+$.param({order:response.order});
+                $(".loading-image").hide();
+                $("#rank_yes_btn").show();
+                window.location.href = "/ranked_list/ranked_list/?"+$.param({order:response.order})+"&category="+category;
               },
               error: function(response){
                 console.log("error", response);
