set up weights page

--- a/app/views/pairwise_comparisons/_about.html.erb
+++ b/app/views/pairwise_comparisons/_about.html.erb
@@ -26,7 +26,7 @@
   <label for = "deactivated" class="question"> Have you ever been deactivated from any of your selected companies? If so, why? </label>
   <input id = "deactivated" type="text" name="upper" value="" placeholder="2 years"> <br> <br>
 
-  <h4 class="subheader"> Algortithmic Experience</h4> <br/>
+  <h4 class="subheader"> Algorithmic Experience</h4> <br/>
 
   <label for = "pending" class="question"> Can you describe how your company’s algorithm matches you with pending requests? </label>
   <input id = "pending" type="text" name="upper" value="" placeholder="Uber, lyft, postmates"> <br> <br>
