--- a/app/assets/stylesheets/overrides.css
+++ b/app/assets/stylesheets/overrides.css
@@ -349,3 +349,13 @@ a:hover
   margin-right: 10%;
   margin-left: 1%;
 }
+
+.pc-name {
+  margin-bottom:4%;
+  margin-top:-3.5%;
+}
+
+.pc-value {
+  font-weight:bold;
+  font-size:1.35em;
+}
