--- a/app/views/pairwise_comparisons/index.html.erb
+++ b/app/views/pairwise_comparisons/index.html.erb
@@ -20,7 +20,7 @@
 
 
 <div id = "aller_encompassing" style = "display:none;">
-<h2 id = "titulo" class="title"> Which Request Would You Like to Recieve? </h2>
+<h2 id = "titulo" class="title"> Which Request Would You Like to Receive? </h2>
 <h6 id = "counter" style = "float:right;margin-top:-4%;margin-right:4%;font-size:2em;font-weight:lighter;color:grey;">
 1/<%= @num_pairs %>
 </h6>
@@ -46,12 +46,12 @@
     <div class="row">
       <div class="card ">
         <div class="card-content">
-          <h5 style = "color:#3d6ab1"> Scenario A </h5>
+          <h5 style = "color:#3d6ab1"> Request A </h5>
             <% counter = 0 %>
             <% @feats.size.times do %>
               <% puts @feats.map{|n| n.category}.inspect %>
-                <p style = "font-weight:bold;font-size:1.35em;">  <%= Scenario.for_group(pc.scenario_1).sort_by{|key| key}.to_h[Scenario.for_group(pc.scenario_1).sort_by{|key| key}.to_h.keys[counter]] %> </p> <br/>
-                <p style = "margin-bottom:4%;margin-top:-3.5%">  <%= Feature.find(Scenario.for_group(pc.scenario_1).sort_by{|key| key}.to_h.keys[counter]).name %> </p>
+                <p class="pc-value">  <%= Scenario.for_group(pc.scenario_1).sort_by{|key| key}.to_h[Scenario.for_group(pc.scenario_1).sort_by{|key| key}.to_h.keys[counter]] %> </p> <br/>
+                <p class="pc-name">  <%= Feature.find(Scenario.for_group(pc.scenario_1).sort_by{|key| key}.to_h.keys[counter]).name %> </p>
               <% counter += 1 %>
             <% end %>
         </div>
@@ -63,7 +63,7 @@
     <div class="row">
       <div class="card">
         <div class="card-content">
-          <h5 style = "color:#3d6ab1"> Scenario B </h5>
+          <h5 style = "color:#3d6ab1"> Request B </h5>
             <% counter = 0 %>
             <% @feats.size.times do %>
                 <p style = "font-weight:bold;font-size:1.35em;">  <%= Scenario.for_group(pc.scenario_2).sort_by{|key| key}.to_h[Scenario.for_group(pc.scenario_2).sort_by{|key| key}.to_h.keys[counter]] %> </p> <br/>
