--- a/app/views/pairwise_comparisons/index_driver.html.erb
+++ b/app/views/pairwise_comparisons/index_driver.html.erb
@@ -37,7 +37,7 @@ For the scenario set below, please assume the role of the algorithm and decide w
     <div class="row">
       <div class="card ">
         <div class="card-content">
-          <h5 style = "color:#3d6ab1"> Scenario A </h5>
+          <h5 style = "color:#3d6ab1"> Driver A </h5>
             <% counter = 0 %>
             <% @feats_1.size.times do %>
                 <p style = "font-weight:bold;font-size:1.35em;">  <%= Scenario.for_group(pc.scenario_1).sort_by{|key| key}.to_h[Scenario.for_group(pc.scenario_1).sort_by{|key| key}.to_h.keys[counter]] %> </p> <br/>
@@ -55,7 +55,7 @@ For the scenario set below, please assume the role of the algorithm and decide w
     <div class="row">
       <div class="card">
         <div class="card-content">
-          <h5 style = "color:#3d6ab1"> Scenario B </h5>
+          <h5 style = "color:#3d6ab1"> Driver B </h5>
             <% counter = 0 %>
             <% @feats_1.size.times do %>
                 <p style = "font-weight:bold;font-size:1.35em;">  <%= Scenario.for_group(pc.scenario_2).sort_by{|key| key}.to_h[Scenario.for_group(pc.scenario_2).sort_by{|key| key}.to_h.keys[counter]] %> </p> <br/>
