shorted instructions, moved current pairwise number down, and increased font size for features

--- a/app/views/evaluations/index.html.erb
+++ b/app/views/evaluations/index.html.erb
@@ -3,7 +3,7 @@
 <hr class="feature-hr">
 <div class="evaluation-image-block">
   <p class = "about-text"> 
-    Thank you for your input in the previous scenario exercises. We will be training our test algorithm 
+    We will be training our test algorithm 
     to make matching decisions based on the features you believe the algorithm should consider and your 
     decisions from the scenario comparisons. We would now like to ask how you want the algorithm to work 
     with you when you are behind the wheel.
