--- a/app/views/pairwise_comparisons/_done.html.erb
+++ b/app/views/pairwise_comparisons/_done.html.erb
@@ -1,20 +1,29 @@
-<div id = "pg_3" style = "width:90%;margin-left:5%;display:none">
-<h1 id = "feat_select" style = "margin-left:10%;color:#3d6ab1" >Answer Pairwise Comparisons to Train Your Social Preference Profile</h1>
-<hr style = "margin-left:-15%;color: white;border-width: 1px;overflow:visible;width: 130%;"/>
+<div id = "pg_3" style = "display:none">
+<h3 id = "feat_select" class="title" >Pairwise Comparisons Summary</h3>
+<hr class="feature-hr"/>
 <br>
 
-<p style = "margin-left:10%;color:black;width:75%;font-size:1.5em;line-height:22pt;font-weight:normal;" >Based on the factors you believe the algorithm should consider when matching drivers to requests, we are now going to give you some sets of scenarios. Each set will have two options, and it is up to your discretion to choose which is the better option. Please assume that these scenarios take place in a small, set location (not a large area like New York City.) Your answers will be used to help train a new matching algorithm we are developing for test cases.</p>
+<p class="feature-text" >
+  Thank you for your input in the previous scenario exercises. For clarificaiton purposes,
+  we will highlight again the difference between the Personal Preference and Social Preference
+  profiles. On the next screen, you will find an evaluations form. 
+</p>
 <br> <br> <br>
 
 
-<p style = "margin-left:10%;font-size:2.4em;color:darkgrey;font-weight:lighter"> Part 1. Personal Preference</p>
-<p style  = "margin-left:10%;color:black;width:90%;font-size:1.5em;line-height:17pt;font-weight:normal;" >Between two requests, choose the request you would prefer over the other   </p>
+<p class="pg-1-subheader"> Part 1. Personal Preference</p>
+<p class="feature-text" >
+  For this part, you chose between two requests based on features that you would consider
+  if you were to make an algorithm for youself.
+</p>
 <br>
-<p style = "margin-left:10%;font-size:2.4em;font-weight:bold;color:#3d6ab1">Part 2. Social Ranking </p>
-<p style = "margin-left:10%;color:black;width:90%;font-size:1.5em;line-height:17pt;font-weight:normal;" > Between two drivers, choose the driver who you think deserves the request  </p>
+<p class="pg-1-subheader">Part 2. Social Ranking </p>
+<p class="feature-text" > 
+  For this part, you acted as the algorithm and chose which driver should get the ping.
+</p>
 <br> <br>
 
-<a href = "evaluations/" class="waves-effect waves-dark btn" id = "start_btn_2" style = "float:right;width:18.5%;padding-top:0.7%;padding-bottom:4%;color:#FFFFFF;background-color:#3d6ab1;font-weight:bold;font-size:1.2em;"> NEXT </a>
+<a href = "evaluations/" class="waves-effect waves-dark btn" id = "start_btn_2" style = "float:right;width:18.5%;padding-top:0.7%;padding-bottom:4%;color:#FFFFFF;background-color:#3d6ab1;font-weight:bold;font-size:1.2em;margin-right:5%;"> NEXT </a>
 <br><br><br><br><br><br><br><br><br><br>
 
 </div>
