--- a/app/views/pairwise_comparisons/_page_1.html.erb
+++ b/app/views/pairwise_comparisons/_page_1.html.erb
@@ -1,15 +1,12 @@
 <div id = "pg_1">
-  <h2 class="title">Answer Pairwise Comparisons to Train Your Individual Preference Profile</h2>
+  <h3 class="title">Answer Pairwise Comparisons to Train Your Individual Preference Profile</h3>
   <hr class="feature-hr">
   <br>
 
   <p class="feature-text">
-    In the previous exercise, you chose features that you believe your company’s in-app algorithm 
-    should consider when matching drivers to requests. We are now going to give you some sets of 
-    hypothetical scenarios based on your chosen features. Each set will have two options, and it 
-    is up to your discretion to choose which is the better option. Please assume that these scenarios 
-    take place in a small, set location (not a large area like New York City.) Your decisions for 
-    each set will be used to help train a new matching algorithm that we are developing for test cases.
+    We are now going to give you some sets of hypothetical scenarios based on your chosen features. 
+    Each set will have two options, and it is up to your discretion to choose which is the better option. 
+    Your decisions will be used to help train our own matching algorithm.
   </p>
   <br> <br> <br>
 
@@ -17,10 +14,8 @@
     <div class="text-image-container">
       <p class="pg-1-subheader"> Part 1. Personal Preference</p>
       <p class = "feature-text">
-        For the following scenario sets, please assume that you have your app open and the algorithm notifies 
-        you of two potential requests in your area. Based on the information you believe the algorithm should 
-        consider when assigning requests to drivers, please choose which request you would prefer the algorithm 
-        to match you with. The information below are features you previously chose that are applicable to these sets of scenarios.
+        Please assume that the algorithm notifies you of two potential requests. Please choose which request you would prefer the algorithm 
+        to match you with. The information below are features you believe that algorithm should consider. 
       </p>
     </div>
     <%= image_tag ('Personal_Pref.png'), :class => "personal-pref-image" %>
