--- a/app/views/pairwise_comparisons/_about.html.erb
+++ b/app/views/pairwise_comparisons/_about.html.erb
@@ -1,11 +1,10 @@
 <div class = "contain_1" style = "display:block">
-<h2 class="title">About</h2>
+<h3 class="title">About</h3>
 <hr id = "hhr" class="about-hr" >
 <p class = "about-text"> 
-  Thank you for participating in this research opportunity! We greatly appreciate you taking time out of your schedule
-  to help us better understand your perspective behind the wheel. Before we move on to the questions regarding your
-  experiences with your company’s algorithm, we would like to know more you and your time working for your
-  company(s). Please answer each question below thoroughly and truthfully. For more open-ended questions, please
+  Thank you for participating! Before we move on to the questions regarding your
+  experiences with your company’s algorithm, we would like to know more you and 
+  your time working for your company(s). For more open-ended questions, please
   do not reveal any private or personally identifiable information about yourself or others in your answers.
 </p>
 <br> <br>
