--- a/app/views/pairwise_comparisons/index_driver.html.erb
+++ b/app/views/pairwise_comparisons/index_driver.html.erb
@@ -16,15 +16,15 @@
 
 
 <div id = "aller_encompassing" style = "display:none;">
-<h3 id = "titulo" style = "color:#3d6ab1;font-weight:bold;margin-left:15%;"> Social Preference </h3>
-<h6 id = "counter" style = "float:right;margin-top:-4%;margin-right:4%;font-size:2em;font-weight:lighter;color:grey;">
-1/<%= @num_pairs %>
-</h6>
-<hr style="color: white;border-width: 1px;overflow:visible;width: 100%;"/>
+<h3 id = "titulo" class="title"> Social Preference </h3>
+<hr class="feature-hr"/>
 <br/>
-<p id="prompt" style="margin-left:15%;color:black;width:70%;font-size:1.5em;line-height:22pt;font-weight:normal;">
-For the scenario set below, please assume the role of the algorithm and decide which driver should be matched with an incoming potential request ping. Please assume that the drivers are in the same general area, and that the number of customers in demand and traffic conditions in the drivers’ area have no effect on your decision. Based on the information you believe the algorithm should consider when assigning drivers to request pings, please choose which driver the algorithm should assign the request ping to. The information about each driver below are features you previously chose that are applicable to these sets of scenarios.
+<p id="prompt" class="feature-text">
+  Please choose which driver should get the ping.
 </p>
+<h4 id = "counter">
+  Scenario 1/<%= @num_pairs %>
+</h4>
 <br/> <br/>
 
 <div id = "all_encompassing" class = "0">
@@ -32,16 +32,16 @@ For the scenario set below, please assume the role of the algorithm and decide w
 <% pcs = @pairwise_comparisons_1 %>
 <% pcs.each do |pc| %>
 
-  <div class = "container-<%= pc.id %>" style = "width:70%;height:45vh;margin-left:15%;display:none" >
-  <div class = "scenario_1" id = "<%= pc.id %>-1" style = "width:45%;float:left;margin-right:5%;cursor:pointer;">
+  <div class = "container-<%= pc.id %>" style = "width:70%;margin-left:15%;display:none" >
+  <div class = "scenario_1" id = "<%= pc.id %>-1" style = "width:45%;float:left;margin-right:5%;">
     <div class="row">
       <div class="card ">
         <div class="card-content">
-          <h5 style = "color:#3d6ab1"> Driver A </h5>
+          <h5 class="pc-header"> Driver A </h5>
             <% counter = 0 %>
             <% @feats_1.size.times do %>
-                <p style = "font-weight:bold;font-size:1.35em;">  <%= Scenario.for_group(pc.scenario_1).sort_by{|key| key}.to_h[Scenario.for_group(pc.scenario_1).sort_by{|key| key}.to_h.keys[counter]] %> </p> <br/>
-                <p style = "margin-bottom:4%;margin-top:-3.5%">  <%= Feature.find(Scenario.for_group(pc.scenario_1).sort_by{|key| key}.to_h.keys[counter]).name %> </p>
+                <p style = "font-weight:bold;font-size:20px;">  <%= Scenario.for_group(pc.scenario_1).sort_by{|key| key}.to_h[Scenario.for_group(pc.scenario_1).sort_by{|key| key}.to_h.keys[counter]] %> </p> <br/>
+                <p style = "margin-bottom:4%;margin-top:-3.5%;font-size:18px;line-height:1.4;">  <%= Feature.find(Scenario.for_group(pc.scenario_1).sort_by{|key| key}.to_h.keys[counter]).name %> </p>
               <% counter += 1 %>
             <% end %>
           </div>
@@ -51,15 +51,15 @@ For the scenario set below, please assume the role of the algorithm and decide w
 
   </div>
 
-  <div class = "scenario_2" id = "<%=pc.id%>-2" style = "width:45%;float:right;cursor:pointer;">
+  <div class = "scenario_2" id = "<%=pc.id%>-2" style = "width:45%;float:right;">
     <div class="row">
       <div class="card">
         <div class="card-content">
-          <h5 style = "color:#3d6ab1"> Driver B </h5>
+          <h5 class="pc-header"> Driver B </h5>
             <% counter = 0 %>
             <% @feats_1.size.times do %>
-                <p style = "font-weight:bold;font-size:1.35em;">  <%= Scenario.for_group(pc.scenario_2).sort_by{|key| key}.to_h[Scenario.for_group(pc.scenario_2).sort_by{|key| key}.to_h.keys[counter]] %> </p> <br/>
-                <p style = "margin-bottom:4%;margin-top:-3.5%">  <%= Feature.find(Scenario.for_group(pc.scenario_2).sort_by{|key| key}.to_h.keys[counter]).name %> </p>
+                <p style = "font-weight:bold;font-size:20px;">  <%= Scenario.for_group(pc.scenario_2).sort_by{|key| key}.to_h[Scenario.for_group(pc.scenario_2).sort_by{|key| key}.to_h.keys[counter]] %> </p> <br/>
+                <p style = "margin-bottom:4%;margin-top:-3.5%;font-size:18px;line-height:1.4;">  <%= Feature.find(Scenario.for_group(pc.scenario_2).sort_by{|key| key}.to_h.keys[counter]).name %> </p>
               <% counter += 1 %>
             <% end %>
           </div>
@@ -209,7 +209,7 @@ Next Scenario
       $('.f-' + `${first+prev}`).css('display', 'none')
       $('.container-' + `${first+prev+1}`).css('display', 'block')
       $('.f-' + `${first+prev+1}`).css('display', 'block')
-      $("#counter").html(`${((prev+1)%(num_pairs))+1}/${num_pairs}`)
+      $("#counter").html(`Scenario ${((prev+1)%(num_pairs))+1}/${num_pairs}`)
 
     });
 
