--- a/app/views/ranked_list/ranked_list.html.erb
+++ b/app/views/ranked_list/ranked_list.html.erb
@@ -13,41 +13,41 @@
       <td><h4 class="subheader"> Model List </h4></td>
       <td><h4 class="subheader"> Your Ranks For: </h4></td>
     </tr>
-    <% @displayElems.each.with_index do |elem, index| %>
-      <tr>
-      <td>
-      <div class="container">
-        <div class="card default">
-          <div class="card-content">
-            <h5><%= "Scenario #{elem[:scenario_id]}" %></h5>
-            <% elem[:features].each do |feature| %>
-                <div class = "cardRow">
-                  <div class = "column left">
-                    <p class="feature-name">  <%= feature[:name] %> </p>
-                  </div>
-                  <div class = "column right">
-                    <p class="feature-value">  <%= feature[:value] %> </p>
-                  </div>
+      <% @displayElems.each do |elem| %>
+        <td>
+          <div class="container">
+            <div class="card default">
+              <div class="card-content">
+                <h5><%= "Scenario #{elem[:scenario_id]}" %></h5>
+                  <% elem[:features].each do |feature| %>
+                      <div class = "cardRow">
+                        <div class = "column left">
+                          <p class="feature-name">  <%= feature[:name] %> </p>
+                        </div>
+                        <div class = "column right">
+                          <p class="feature-value">  <%= feature[:value] %> </p>
+                        </div>
+                      </div>
+                  <% end %>
                 </div>
-            <% end %>
+              </div>
+            </div>
           </div>
-        </div>
-      </div>
-      </td>
-      </tr>
-    <% end %>
-    </div>
-    </table>
-    <div class="row">
-      <a class="btn" id = "submit_btn"> Submit Changes </a>
-      <a class="btn" id = "lgtm_btn"> No Changes Needed </a>
-    </div>
+        </td>
+        </tr>
+      <% end %>
+  </div>
+  </table>
+  <div class="row">
+    <a class="btn" id = "submit_btn"> Submit Changes </a>
+    <a class="btn" id = "lgtm_btn"> No Changes Needed </a>
+  </div>
 </div>
 
 
 <script type="text/javascript">
   $(function() {
-    $('.sortable').railsSortable();
+    $(".sortable").railsSortable();
   });
 
   $("#submit_btn").click(function(event) {
