--- a/app/views/pairwise_comparisons/new_how.html.erb
+++ b/app/views/pairwise_comparisons/new_how.html.erb
@@ -68,7 +68,7 @@ the time a payment is issued. </p> <br / >
 <div class="feature-image-block">
   <p class = "feature-text">
   Just like what you did for the previous selection, please choose the features the algorithm should take into 
-  account when deciding which driver should get the request. (0: Not Important - 1: Essential). If there other 
+  account when deciding which driver should get the request (0: Not Important - 1: Essential). If there other 
   features you believe the algorithm should use, please add your own at the bottom of the page.
   </p>
   <%= image_tag ('Feature_Selection.png'), :class => "feature-selection-image" %>
