--- a/app/views/pairwise_comparisons/index.html.erb
+++ b/app/views/pairwise_comparisons/index.html.erb
@@ -45,11 +45,15 @@
             <% counter = 0 %>
             <% @feats.size.times do %>
               <% puts @feats.map{|n| n.category}.inspect %>
-                <p style = "font-weight:bold;font-size:20px;">  
-                  <%= Scenario.for_group(pc.scenario_1).sort_by{|key| key}.to_h[Scenario.for_group(pc.scenario_1).sort_by{|key| key}.to_h.keys[counter]] %> 
+                <p style = "font-weight:bold;font-size:20px;display:inline-block;">  
+                  <%= Scenario.for_group(pc.scenario_1).sort_by{|key| key}.to_h[Scenario.for_group(pc.scenario_1).sort_by{|key| key}.to_h.keys[counter]] %>
+                </p>
+                <p style = "font-size:20px;display:inline-block;margin-left:1%;">
                   <%=Feature.find(Scenario.for_group(pc.scenario_1).sort_by{|key| key}.to_h.keys[counter]).unit%> 
                 </p> <br/>
-                <p style = "margin-bottom:4%;margin-top:-3.5%;font-size:18px;line-height:1.4;">  <%= Feature.find(Scenario.for_group(pc.scenario_1).sort_by{|key| key}.to_h.keys[counter]).name %> </p>
+                <p style = "margin-bottom:4%;margin-top:1%;font-size:18px;line-height:1.4;">  
+                  <%= Feature.find(Scenario.for_group(pc.scenario_1).sort_by{|key| key}.to_h.keys[counter]).name %>
+                </p>
               <% counter += 1 %>
             <% end %>
         </div>
@@ -65,12 +69,14 @@
             <% counter = 0 %>
             <% @feats.size.times do %>
                 <p style = "font-weight:bold;font-size:20px;display:inline-block;">  
-                  <%= Scenario.for_group(pc.scenario_2).sort_by{|key| key}.to_h[Scenario.for_group(pc.scenario_2).sort_by{|key| key}.to_h.keys[counter]] %> 
+                  <%= Scenario.for_group(pc.scenario_2).sort_by{|key| key}.to_h[Scenario.for_group(pc.scenario_2).sort_by{|key| key}.to_h.keys[counter]] %>
                 </p>
-                <p style = "font-size:20px;display:inline-block;">
-                  <%=Feature.find(Scenario.for_group(pc.scenario_1).sort_by{|key| key}.to_h.keys[counter]).unit%> 
+                <p style = "font-size:20px;display:inline-block;margin-left:1%;">
+                  <%=Feature.find(Scenario.for_group(pc.scenario_2).sort_by{|key| key}.to_h.keys[counter]).unit%> 
                 </p> <br/>
-                <p style = "margin-bottom:4%;margin-top:1%;font-size:18px;line-height:1.4;">  <%= Feature.find(Scenario.for_group(pc.scenario_2).sort_by{|key| key}.to_h.keys[counter]).name %> </p>
+                <p style = "margin-bottom:4%;margin-top:1%;font-size:18px;line-height:1.4;"> 
+                  <%= Feature.find(Scenario.for_group(pc.scenario_2).sort_by{|key| key}.to_h.keys[counter]).name %> 
+                </p>
               <% counter += 1 %>
             <% end %>
           </div>
