--- a/app/views/pairwise_comparisons/index_driver.html.erb
+++ b/app/views/pairwise_comparisons/index_driver.html.erb
@@ -40,8 +40,15 @@
           <h5 class="pc-header"> Driver A </h5>
             <% counter = 0 %>
             <% @feats_1.size.times do %>
-                <p style = "font-weight:bold;font-size:20px;">  <%= Scenario.for_group(pc.scenario_1).sort_by{|key| key}.to_h[Scenario.for_group(pc.scenario_1).sort_by{|key| key}.to_h.keys[counter]] %> </p> <br/>
-                <p style = "margin-bottom:4%;margin-top:-3.5%;font-size:18px;line-height:1.4;">  <%= Feature.find(Scenario.for_group(pc.scenario_1).sort_by{|key| key}.to_h.keys[counter]).name %> </p>
+              <p style = "font-weight:bold;font-size:20px;display:inline-block;">  
+                <%= Scenario.for_group(pc.scenario_1).sort_by{|key| key}.to_h[Scenario.for_group(pc.scenario_1).sort_by{|key| key}.to_h.keys[counter]] %> 
+              </p>
+              <p style = "font-size:20px;display:inline-block;margin-left:1%;">
+                <%= Feature.find(Scenario.for_group(pc.scenario_1).sort_by{|key| key}.to_h.keys[counter]).unit %> 
+              </p> <br/>
+              <p style = "margin-bottom:4%;margin-top:1%;font-size:18px;line-height:1.4;"> 
+                <%= Feature.find(Scenario.for_group(pc.scenario_1).sort_by{|key| key}.to_h.keys[counter]).name %> 
+              </p>
               <% counter += 1 %>
             <% end %>
           </div>
@@ -58,8 +65,15 @@
           <h5 class="pc-header"> Driver B </h5>
             <% counter = 0 %>
             <% @feats_1.size.times do %>
-                <p style = "font-weight:bold;font-size:20px;">  <%= Scenario.for_group(pc.scenario_2).sort_by{|key| key}.to_h[Scenario.for_group(pc.scenario_2).sort_by{|key| key}.to_h.keys[counter]] %> </p> <br/>
-                <p style = "margin-bottom:4%;margin-top:-3.5%;font-size:18px;line-height:1.4;">  <%= Feature.find(Scenario.for_group(pc.scenario_2).sort_by{|key| key}.to_h.keys[counter]).name %> </p>
+              <p style = "font-weight:bold;font-size:20px;display:inline-block;">  
+                <%= Scenario.for_group(pc.scenario_2).sort_by{|key| key}.to_h[Scenario.for_group(pc.scenario_2).sort_by{|key| key}.to_h.keys[counter]] %>
+              </p>
+              <p style = "font-size:20px;display:inline-block;margin-left:1%;">
+                <%= Feature.find(Scenario.for_group(pc.scenario_2).sort_by{|key| key}.to_h.keys[counter]).unit %>
+              </p> <br/>
+              <p style = "margin-bottom:4%;margin-top:1%;font-size:18px;line-height:1.4;"> 
+                <%= Feature.find(Scenario.for_group(pc.scenario_2).sort_by{|key| key}.to_h.keys[counter]).name %>
+              </p>
               <% counter += 1 %>
             <% end %>
           </div>
