--- a/app/views/evaluations/new.html.erb
+++ b/app/views/evaluations/new.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1 class="title">Let’s check the results of your <%= params[:category] == 'request' ? 'individual' : 'social' %> preference model. <%= current_round > 0 ? "(Tuning Round #{current_round})." : "" %></h1>
+  <h1 class="title">Let’s check the results of your <%= params[:category] == 'request' ? 'individual' : 'social' %> preference model. <%= current_round > 0 ? "(Tuning Round #{current_round+1})" : "" %></h1>
   <div class="row">
     <div class="col s5"></div>
     <div class="col s1">
