saves as three instead of nil

--- a/app/views/pairwise_comparisons/index.html.erb
+++ b/app/views/pairwise_comparisons/index.html.erb
@@ -173,7 +173,7 @@ Next Scenario
         $("#<%= pc.id%>-B").prop('checked', false)
         $("#<%= pc.id%>-N").prop('checked', true)
         $("#reason-<%= pc.id%>").prop('disabled', false);
-        post_choice('nil', parseInt(<%= pc.id%>))
+        post_choice(3, parseInt(<%= pc.id%>))
      });
   </script>
 <% end %>
