--- a/app/views/pairwise_comparisons/index_driver.html.erb
+++ b/app/views/pairwise_comparisons/index_driver.html.erb
@@ -38,18 +38,17 @@
       <div class="card ">
         <div class="card-content">
           <h5 class="pc-header"> Driver A </h5>
-            <% counter = 0 %>
-            <% @feats_1.size.times do %>
-              <p style = "font-weight:bold;font-size:20px;display:inline-block;">  
-                <%= Scenario.for_group(pc.scenario_1).sort_by{|key| key}.to_h[Scenario.for_group(pc.scenario_1).sort_by{|key| key}.to_h.keys[counter]] %> 
+            <% features = Scenario.for_group_features(pc.scenario_1) %>
+            <% features.each do |feature| %>
+              <p style = "font-weight:bold;font-size:20px;display:inline-block;">
+                <%= feature.feature_value %>
               </p>
               <p style = "font-size:20px;display:inline-block;margin-left:1%;">
-                <%= Feature.find(Scenario.for_group(pc.scenario_1).sort_by{|key| key}.to_h.keys[counter]).unit %> 
+                <%= feature.feature.unit %>
               </p> <br/>
-              <p style = "margin-bottom:4%;margin-top:1%;font-size:18px;line-height:1.4;"> 
-                <%= Feature.find(Scenario.for_group(pc.scenario_1).sort_by{|key| key}.to_h.keys[counter]).name %> 
+              <p style = "margin-bottom:4%;margin-top:1%;font-size:18px;line-height:1.4;">
+                <%= feature.feature.name %>
               </p>
-              <% counter += 1 %>
             <% end %>
           </div>
         </div>
@@ -63,18 +62,17 @@
       <div class="card">
         <div class="card-content">
           <h5 class="pc-header"> Driver B </h5>
-            <% counter = 0 %>
-            <% @feats_1.size.times do %>
-              <p style = "font-weight:bold;font-size:20px;display:inline-block;">  
-                <%= Scenario.for_group(pc.scenario_2).sort_by{|key| key}.to_h[Scenario.for_group(pc.scenario_2).sort_by{|key| key}.to_h.keys[counter]] %>
+            <% features = Scenario.for_group_features(pc.scenario_2) %>
+            <% features.each do |feature| %>
+              <p style = "font-weight:bold;font-size:20px;display:inline-block;">
+                <%= feature.feature_value %>
               </p>
               <p style = "font-size:20px;display:inline-block;margin-left:1%;">
-                <%= Feature.find(Scenario.for_group(pc.scenario_2).sort_by{|key| key}.to_h.keys[counter]).unit %>
+                <%= feature.feature.unit %>
               </p> <br/>
-              <p style = "margin-bottom:4%;margin-top:1%;font-size:18px;line-height:1.4;"> 
-                <%= Feature.find(Scenario.for_group(pc.scenario_2).sort_by{|key| key}.to_h.keys[counter]).name %>
+              <p style = "margin-bottom:4%;margin-top:1%;font-size:18px;line-height:1.4;">
+                <%= feature.feature.name %>
               </p>
-              <% counter += 1 %>
             <% end %>
           </div>
         </div>
