--- a/app/views/pairwise_comparisons/new_how.html.erb
+++ b/app/views/pairwise_comparisons/new_how.html.erb
@@ -81,13 +81,15 @@ the time a payment is issued. </p> <br / >
     </thead>
     <% a = get_ranges_ai %>
     <% b = get_ranges_ai_2 %>
-    <% counter = "" %>
-    <% Feature.all.active.driver.added_by(current_user.id).order(:description).each do |f| %>
+    <% @features_by_category.to_a.shuffle.each do |k, v| %> <!-- randomize the order to reduce bias --> 
+    <% wrote_sub_header = false %>
+    <% v.each do |f| %> 
     <tr>
 
       <td>
-        <% if  counter  == "" || f.description != counter %>
+        <% if  !wrote_sub_header %>
         <h5 class = "subheader"> <%= f.description %> </h5>
+        <% wrote_sub_header = true %>
         <% end %>
         <div class="row">
           <div class="card ">
@@ -107,7 +109,7 @@ the time a payment is issued. </p> <br / >
         <td id = "yof-<%=f.id%>" style = "cursor:pointer;font-weight:bold;font-size:2em;"> &times; </td>
       <% end %>
     </tr>
-    <% counter = f.description %>
+    <% end %>
   <% end %>
 </table>
 
