finished rl flow on react

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,7 +42,7 @@
  $(document).ready(function() {
      var docHeight = $(window).height();
      var footerHeight = $('#footer').height();
-     var footerTop = $('#footer').position().top + footerHeight;
+     var footerTop = $('#footer').offset().top + footerHeight;
      if (footerTop < docHeight)
          $('#footer').css('margin-top', 10+ (docHeight - footerTop) + 'px');
  });
