--- a/app/views/pairwise_comparisons/_post_driver_feat_select.html.erb
+++ b/app/views/pairwise_comparisons/_post_driver_feat_select.html.erb
@@ -1,4 +1,4 @@
-<div id = "pg_1">
+<div id = "pg_1" style="height:100%;">
   <h3 class="title">Answer Pairwise Comparisons to Train Your Social Preference Profile</h3>
   <hr class="feature-hr">
 
@@ -6,7 +6,6 @@
   <br><br>
   <p class="pg-1-subheader">Scenarios will include: </p>
 
-  <% counter_p1 = 0 %>
   <div>
     <% @feats_1.each do |f| %>
       <p class = "scenario-names"><%= f.name %></p>
@@ -14,5 +13,4 @@
   </div>
   <a class="waves-effect waves-dark btn" id = "start_btn_4"> Start </a>
   <br><br><br><br><br><br><br><br>
-
 </div>
